tests/semantic/decl_collection/snapshots/r#mod__semantic__decl_collection__global_var_collection__input_with_attribute.snap
---
source: tests/semantic/decl_collection/global_var_collection.rs
expression: "&test_ctx.prog_ctx.scope_registry"
---
scopes:
  0:
    parent: ~
    name_to_id: {}
    variables: []
    defined_names: []
    range:
      start: 0
      end: 0
  1:
    parent: ~
    name_to_id:
      in: 0
    variables:
      - 0
    defined_names:
      - in
    range:
      start: 0
      end: 0
variables:
  0:
    name: in
    value_type:
      Primitive: Float
    def_val:
      kind:
        FloatLiteral: 0
      value_type:
        Primitive: Float
      range:
        start: 0
        end: 0
    range:
      start: 0
      end: 0
    var_kind:
      Input:
        attrs:
          - name: slider
            args:
              - kind:
                  FloatLiteral: 0
                value_type:
                  Primitive: Float
                range:
                  start: 0
                  end: 0
              - kind:
                  FloatLiteral: 1
                value_type:
                  Primitive: Float
                range:
                  start: 0
                  end: 0
            range:
              start: 0
              end: 0
global_scope_ids:
  0: 1
next_scope_id: 2
next_variable_id: 1
