tests/semantic/decl_collection/snapshots/r#mod__semantic__decl_collection__global_var_collection__simple_output_resolution.snap
---
source: tests/semantic/decl_collection/global_var_collection.rs
expression: "&test_ctx.prog_ctx.scope_registry"
---
scopes:
  0:
    parent: ~
    name_to_id: {}
    variables: []
    defined_names: []
    range:
      start: 0
      end: 0
  1:
    parent: ~
    name_to_id:
      output: 0
    variables:
      - 0
    defined_names:
      - output
    range:
      start: 0
      end: 0
variables:
  0:
    name: output
    value_type:
      Primitive: Int
    def_val:
      kind:
        IntLiteral: 0
      value_type:
        Primitive: Int
      range:
        start: 0
        end: 0
    range:
      start: 0
      end: 0
    var_kind: Output
global_scope_ids:
  0: 1
next_scope_id: 2
next_variable_id: 1
